shopModx-0.1.1-beta
========================================
- [#8] Set modWebResourceproductGetlistProcessor::setSelection() to protected
- [#6] Renamed PrepareUniqObjectsQuery to prepareUniqObjectsQuery
- Minor bugfix

shopModx-0.1.0-beta
========================================
- Added method ShopmodxResourceProduct::duplicate
- Minor bugfix

shopModx-0.0.9-beta
========================================
- Removed ShopmodxTemplate class
- Added method ShopmodxWebGetlistProcessor::countTotal

shopModx-0.0.8-beta
========================================
- ShopmodxWebGetListProcessor code refactoring
- ShopmodxWebGetDataProcessor code refactoring


shopModx-0.0.7-beta
========================================
- ShopmodxWebGetListProcessor code refactoring
- ShopmodxWebGetDataProcessor code refactoring


shopModx-0.0.6-beta
========================================
- [#2] Exclude unpublished currencies
- Added shopResource data controllers
- Added ShopmodxWebGetlistProcessor
- Added ShopmodxWebGetDataProcessor
- Added ShopmodxWebGetCollectionProcessor
- Added modWebResourceproductGetlistProcessor
- Added modWebResourceproductGetDataProcessor
- Added modWebResourceproductGetcollectionProcessor


shopModx-0.0.5-beta
========================================
- ShopmodxTemplate code refactored

shopModx-0.0.4-beta
========================================
- Added method shopModx::makeUrl(). Return url if aliasMap disabled
- Added method ShopmodxResource::_process();
- Added ShopmodxTemplate extends modTemplate with supporting third-party templates system.
  modxSmarty using recomended http://modx.com/extras/package/modxsmarty
- Updated class ShopmodxRequest
- Added ShopmodxResource in create context menu
- Changed ShopmodxResource related object modTemplate on ShopmodxTemplate
- Added parser-class ShopmodxParser extends modParser for correct processing link-tags
  [[~id]] when aliasMap disabled via cacheOptimizer.