@@ -1,3 +1,9 @@
+shopModx-0.2.0-beta
+========================================
+- Added param includeTVs in ShopmodxWebGetDataProcessor. Default true.
+- ShopmodxWebGetDataProcessor::getData optimization.
+- Added caching in ShopmodxWebGetlistProcessor
+
 shopModx-0.1.1-beta
 ========================================
 - [#8] Set modWebResourceproductGetlistProcessor::setSelection() to protected
